man1_MANS = \
	$(PACKAGE_NAME).1

EXTRA_DIST = \
	$(PACKAGE_NAME).1.in

@YELP_HELP_RULES@

HELP_ID = $(PACKAGE_NAME)

HELP_FILES = \
	index.page \
	font-manager-categories.page \
	font-manager-character-map.page \
	font-manager-collections.page \
	font-manager-font-activation.page \
	font-manager-fontconfig.page \
	font-manager-font-installation.page \
	font-manager-font-removal.page \
	font-manager-font-sources.page \
	font-manager-introduction.page \
	font-manager-license.page \
	font-manager-metadata.page \
	font-manager-orthographies.page \
	font-manager-substitutions.page \
	font-manager-supported-formats.page


HELP_MEDIA = \
	media/character-map.png \
	media/license.png \
	media/list-add-symbolic.svg \
	media/list-remove-symbolic.svg \
	media/main-window.png \
	media/metadata.png \
	media/orthographies.png \
	media/preferences-desktop-font.png \
	media/preferences-desktop-font-16.png \
	media/preferences-system-symbolic.svg

HELP_LINGUAS = \
	ar \
	ca \
	es \
	pl \
	ru

MAINTAINERCLEANFILES = \
	$(PACKAGE_NAME).pot \
	./Makefile.in
